--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css" loading="lazy">
     <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
 </head>
 
@@ -65,11 +65,9 @@
             <div class="aboutMe_text">
                 <h2 class="oxanium-600">About Me</h2>
                 <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually
-                    complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and
-                    Bootstrap. I have also
-                    done some studying of UI design and am familiar with Figma and Adobe Illustrator.
+                    complex, responsive, and interactive designs. As of now, I have experience with HTML, CSS, Bootstrap, and Javascript. I have also done studied UI design and am familiar with Figma and Adobe Illustrator.
                 </p>
-                <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
+                <button class="btn_styling"><a href="./Simcha Lapp Resume (2025).pdf" download="Simcha Lapp CV">Download my
                         CV</a></button>
 
                 <div class="icon_container">
@@ -250,9 +248,9 @@
         <div class="project_card">
             <div class="project_card_img"><img src="./images/calendar.jpg" alt="calendar"></div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Calendar Account</h3>
+                <h3 class="project_card_title oxanium-600">User Login</h3>
                 <p class="project_blurb josefin-light">A user account system with registration, login, admin access and management. Built using HTML, CSS, & Javascript.</p>
-                <button class="btn_styling"><a href="./html/Javascript_projectPages/calendarAccount_page.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/userLogin_project.html">Project Page</a></button>
             </div>
         </div>
 
