--- a/html/Javascript_projectPages/userLogin_project.html
+++ b/html/Javascript_projectPages/userLogin_project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Project Page</title>
+    <title>User Login Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../../index.html">
                     <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
@@ -30,12 +30,12 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <h1 class="hero_header"">Calendar Account</h1>
-                    <p class=" header_text"">A multi-leveled math problem generator to test your skills. Built using HTML, CSS, & Javascript.</p>
+                <h1 class="hero_header"">User Login</h1>
+                    <p class=" header_text""> A user login and registration site with validation and admin management. Built using HTML, CSS, & Javascript.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling"><a href="../projects/Zipped Projects/Travel_Project.zip"
-                    download="Travel Project">Download</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/User Login Project.zip"
+                    download="User Login Project">Download</a></button>
                 <button class="btn_styling"><a href="../../projects/Javascript Projects/User Login/index.html">View</a></button>
             </div>
         </div>
@@ -48,23 +48,23 @@
     </section>
 
     <section class="project_preview">
-        <img src="../images/travelProjectSnip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../images/travelProjectMobileSnip.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/userLoginProject.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
+        <img src="../../images/userLoginProjectMob.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="../images/email_icon.png" alt="email icon"></div>
+                    <span><i class="fa-regular fa-2x fa-envelope"></i></span>
                     <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="../images/phone_icon.png" alt="phone icon"></div>
+                    <span><i class="fa-solid fa-2x fa-phone"></i></span>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="../images/linkedin_icon.png" alt="linkedin icon"></div>
+                    <span><i class="fa-brands fa-2x fa-linkedin"></i></span>
                     <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
