memory game update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="project_card_area">
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/Coffee.png" alt="coffee mug" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/Coffee.png" alt="coffee mug" class="cardimg" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Coffee Coupon Sign Up</h3>
                     <p class="project_blurb josefin-light">A clean and beautiful sign up to receive a coupon for a free
@@ -103,7 +103,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt="forest"></div>
+                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt="forest" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Travel Agency Contact Page</h3>
                     <p class="project_blurb josefin-light">Beautiful and elegant landing page for a travel agency. Built
@@ -114,7 +114,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/coding_background.jpg" alt="programming code"></div>
+                <div class="project_card_img"><img src="./images/coding_background.jpg" alt="programming code" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Coding Course Sign Up</h3>
                     <p class="project_blurb josefin-light">A sign up for a coding course with a bright and abstract
@@ -126,7 +126,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/mall.jpg" alt="shopping mall"></div>
+                <div class="project_card_img"><img src="./images/mall.jpg" alt="shopping mall" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Gift Card Sign Up Page</h3>
                     <p class="project_blurb josefin-light">A summery and young sign up page. Built with HTML, CSS, and
@@ -136,7 +136,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/package.jpg" alt="delivery truck" class="cardimg">
+                <div class="project_card_img"><img src="./images/package.jpg" alt="delivery truck" class="cardimg" loading="lazy">
                 </div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
@@ -148,7 +148,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/handshake.jpg" alt="handshake"></div>
+                <div class="project_card_img"><img src="./images/handshake.jpg" alt="handshake" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Consulting Firm Contact Page</h3>
                     <p class="project_blurb josefin-light">A funky contact page for a consulting firm. Built with HTML,
@@ -159,7 +159,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/basketball.jpg" alt="basketball hoop"></div>
+                <div class="project_card_img"><img src="./images/basketball.jpg" alt="basketball hoop" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Basketball League Login Page</h3>
                     <p class="project_blurb josefin-light"> A youthful and fun login page for a summer basketball
@@ -170,7 +170,7 @@
             </div>
 
             <div class="project_card" id="project_card3">
-                <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Zoo Newsletter</h3>
                     <p class="project_blurb josefin-light">An interesting and outdoorsy newsletter sign up for a zoo.
@@ -181,7 +181,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt="bitcoin logo"></div>
+                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt="bitcoin logo" loading="lazy"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Cryptocurrency Exchange</h3>
                     <p class="project_blurb josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase
@@ -200,7 +200,7 @@
 
     <div class="project_card_area">
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/math_game.jpg" alt="equations" class="cardimg"></div>
+            <div class="project_card_img"><img src="./images/math_game.jpg" alt="equations" class="cardimg" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Math Game</h3>
                 <p class="project_blurb josefin-light">A multi-leveled math problem generator to test your skills. Built using HTML, CSS, & Javascript.</p>
@@ -209,7 +209,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/webpage.jpg" alt="webpage"></div>
+            <div class="project_card_img"><img src="./images/webpage.jpg" alt="webpage" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Page Builder</h3>
                 <p class="project_blurb josefin-light">An interface for quickly mocking up simple webpages in realtime. Built using HTML, CSS, & Javascript.</p>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/globe.jpg" alt="globe"></div>
+            <div class="project_card_img"><img src="./images/globe.jpg" alt="globe" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Country Data</h3>
                 <p class="project_blurb josefin-light">A searchable and sortable database for country data. Built using HTML, CSS, & Javascript.</p>
@@ -227,7 +227,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/clocks.jpg" alt="clocks"></div>
+            <div class="project_card_img"><img src="./images/clocks.jpg" alt="clocks" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">World Clocks</h3>
                 <p class="project_blurb josefin-light">A simple display of multiple timezones from around the world, including their weather. Built using HTML, CSS, & Javascript.</p>
@@ -236,7 +236,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/tictactoe.jpg" alt="tic TicTacToe" class="cardimg">
+            <div class="project_card_img"><img src="./images/tictactoe.jpg" alt="tic TicTacToe" class="cardimg" loading="lazy"> 
             </div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Tic Tac Toe</h3>
@@ -246,7 +246,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/calendar.jpg" alt="calendar"></div>
+            <div class="project_card_img"><img src="./images/calendar.jpg" alt="calendar" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">User Login</h3>
                 <p class="project_blurb josefin-light">A user account system with registration, login, admin access and management. Built using HTML, CSS, & Javascript.</p>
@@ -255,7 +255,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/cards.jpg" alt="cards"></div>
+            <div class="project_card_img"><img src="./images/cards.jpg" alt="cards" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Memory Game</h3>
                 <p class="project_blurb josefin-light">A grid pattern matching memory game with adjustable difficulty. Built using HTML, CSS, & Javascript.</p>
