memory game update

--- a/projects/Javascript Projects/Memory Game/index.html
+++ b/projects/Javascript Projects/Memory Game/index.html
@@ -33,6 +33,7 @@
     <div id="gameEnd" class="hidden">
         <div id="finalMessage">
             <h2 class="start-regular">Good Job!</h2>
+            <audio src="./audio/game-win.mp3" id="winSound"></audio>
         </div>
         <button id="restart" class="button start-regular">Play Again</button>
     </div>
