user login tweaks

--- a/projects/Javascript Projects/User Login/login.html
+++ b/projects/Javascript Projects/User Login/login.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
-    <div class="login">
-        <h2>Log In</h2>
+<body style="background-color: steelblue;">
+    <div class="form-container" id="login">
+        <h1>Log In</h1>
         <form action="" class="loginForm">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
@@ -23,7 +23,7 @@
         </form>
 
         <p>Don't have an account? <a href="./register.html">Register</a></p>
-        <button id="manageUsers"><a href="./userAccounts.html">Manage Users</a></button>
+        <button id="manageUsers"><a href="./admin.html">Manage Users</a></button>
     </div>
 
     
