--- a/projects/Javascript Projects/User Login/register.html
+++ b/projects/Javascript Projects/User Login/register.html
@@ -13,8 +13,8 @@
     
 
 </head>
-<body>
-    <div class="register">
+<body style="background-color: steelblue;">
+    <div class="form-container">
         <h1>Register</h1>
         <form class="registerForm">
             <label for="firstname">First Name<span class="asterisk">*</span></label>
