--- a/projects/Javascript Projects/User Login/admin.html
+++ b/projects/Javascript Projects/User Login/admin.html
@@ -7,7 +7,7 @@
     <script src="./scripts/admin.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body style="background-color: aliceblue">
+<body style="background-color: steelblue">
     <div>
         <h1>User Accounts</h1>
         <table id="userTable">
