--- a/index.html
+++ b/index.html
@@ -263,6 +263,15 @@
             </div>
         </div>
 
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/cards.jpg" alt="cards" loading="lazy"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Family Purity Calendar</h3>
+                <p class="project_blurb josefin-light">Under Developement. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/memoryGame_page.html">Project Page</a></button>
+            </div>
+        </div>
+
         
     </div>
 </section>
