--- a/projects/Javascript Projects/Mikvah Calendar/index.html
+++ b/projects/Javascript Projects/Mikvah Calendar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikvah Calendar</title>
+    <title>Family Purity Calendar</title>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
     <script src="./main.js" defer></script>
     <link rel="stylesheet" href="./main.css">
@@ -13,7 +13,7 @@
     
     <div class="container">
         <div class="form-container">
-            <h1>Mikvah Calendar</h1>
+            <h1>Family Purity Calendar</h1>
             <form action="" class="form">
                 <label for="machzorDate">Machzor</label>
                 <input type="date" id="machzorDate" name="machzorDate" >
