day onah function

--- a/projects/Javascript Projects/Mikvah Calendar/index.html
+++ b/projects/Javascript Projects/Mikvah Calendar/index.html
@@ -19,6 +19,7 @@
                 <input type="date" id="machzorDate" name="machzorDate" >
     
                 <select name="onah" id="onah">
+                    <option value="">Select Onah</option>
                     <option value="onahAM">AM</option>
                     <option value="onahPM">PM</option>
                 </select>
