--- a/projects/Javascript Projects/Mikvah Calendar/index.html
+++ b/projects/Javascript Projects/Mikvah Calendar/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Purity Calendar</title>
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js' defer></script>
     <script src="./main.js" defer></script>
     <link rel="stylesheet" href="./main.css">
 </head>
