--- a/projects/Javascript Projects/User Login/index.html
+++ b/projects/Javascript Projects/User Login/index.html
@@ -7,16 +7,16 @@
     <script src="./scripts/auth.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body style="background-color: steelblue;">
-    <div class="form-container" id="landing">
+<body">
+    <div class="hp-container" id="landing">
         <h1>Welcome to the User Account System</h1>
         <div class="clickThrough">
-            <div>
+            <div class="register">
                 <p>Don't have an account?</p>
                 <a href="./register.html"><button>Register</button></a> 
             </div>
            
-            <div>
+            <div class="login">
                 <p>Already have an account?</p>
                 <a href="./login.html"><button>Log In</button></a>
             </div>
