user login responsiveness

--- a/projects/Javascript Projects/User Login/index.html
+++ b/projects/Javascript Projects/User Login/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body">
-    <div class="hp-container" id="landing">
+    <div class="form-container" id="hp-container">
         <h1>Welcome to the User Account System</h1>
         <div class="clickThrough">
-            <div class="register">
+            <div>
                 <p>Don't have an account?</p>
                 <a href="./register.html"><button>Register</button></a> 
             </div>
            
-            <div class="login">
+            <div>
                 <p>Already have an account?</p>
                 <a href="./login.html"><button>Log In</button></a>
             </div>
