--- a/projects/Javascript Projects/User Login/login.html
+++ b/projects/Javascript Projects/User Login/login.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-<body style="background-color: steelblue;">
-    <div class="form-container" id="login">
+<body>
+    <div class="form-container" id="login-container">
         <h1>Log In</h1>
         <form action="" class="loginForm">
             <label for="username">Username</label>
@@ -22,7 +22,7 @@
             <button type="submit" id="login-btn">Log In</button>
         </form>
 
-        <p>Don't have an account? <a href="./register.html">Register</a></p>
+        <p id="registerNote">Don't have an account? <a href="./register.html">Register</a></p>
         <button id="manageUsers"><a href="./admin.html">Manage Users</a></button>
     </div>
 
