--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simcha Lapp Portfolio</title>
     <script src="./Scripts/contactForm.js" defer></script>
+    <script src="./Scripts/main.js" defer></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -86,9 +87,14 @@
         </div>
     </section>
 
-    <section id="htmlProjects" class="project_section">
-        <h2 class="project_header josefin-bold">HtML & CSS Projects</h2>
+    <div id="projectButtons">
+        <button class="btn_styling" id="htmlProjectsBtn"><h2 class="project_header josefin-bold">HTML & CSS Projects</h2></button>
+        <button class="btn_styling" id="jsProjectsBtn"><h2 class="project_header josefin-bold">Javascript Projects</h2></button>
+    </div>
+    
 
+    <section id="htmlProjects" class="project_section">
+        <h2 class="project_header josefin-bold">HTML & CSS Projects</h2>
         <div class="project_card_area">
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Coffee.png" alt="coffee mug" class="cardimg" loading="lazy"></div>
@@ -195,9 +201,8 @@
     </section>
 
 
-    <section id="jsProjects" class="project_section">
-        <h2 class="project_header josefin-bold">Javascript Projects</h2>
-
+<section id="jsProjects" class="project_section">
+    <h2 class="project_header josefin-bold">Javascript Projects</h2>
     <div class="project_card_area">
         <div class="project_card">
             <div class="project_card_img"><img src="./images/math_game.jpg" alt="equations" class="cardimg" loading="lazy"></div>
@@ -246,7 +251,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/calendar.jpg" alt="calendar" loading="lazy"></div>
+            <div class="project_card_img"><img src="./images/account.jpg" alt="calendar" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">User Login</h3>
                 <p class="project_blurb josefin-light">A user account system with registration, login, admin access and management. Built using HTML, CSS, & Javascript.</p>
@@ -264,11 +269,11 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/cards.jpg" alt="cards" loading="lazy"></div>
+            <div class="project_card_img"><img src="./images/calendar.jpg" alt="cards" loading="lazy"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Family Purity Calendar</h3>
                 <p class="project_blurb josefin-light">Under Developement. Built using HTML, CSS, & Javascript.</p>
-                <button class="btn_styling"><a href="./html/Javascript_projectPages/memoryGame_page.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/familyPurity_page.html">Project Page</a></button>
             </div>
         </div>
 
