--- a/html/Javascript_projectPages/familyPurity_page.html
+++ b/html/Javascript_projectPages/familyPurity_page.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/familyPuritySnip.png" alt="family purity calendar" class="screenshot d-md-block d-none">
+        <img src="" alt="family purity calendar" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
