--- a/html/Javascript_projectPages/pageBuilder_page.html
+++ b/html/Javascript_projectPages/pageBuilder_page.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="../../images/pagebuilderProject.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../../images/pagebuilderProjectMob.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/pagebuilderProject.png" alt="page builder screenshot" class="screenshot d-md-block d-none">
+        <img src="../../images/pagebuilderProjectMob.png" alt="page builder screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
