--- a/html/Javascript_projectPages/ticTacToe_page.html
+++ b/html/Javascript_projectPages/ticTacToe_page.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="../../images/tictactoeProject.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../../images/tictactoeProjectMob.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/tictactoeProject.png" alt="tictactoe screenshot" class="screenshot d-md-block d-none">
+        <img src="../../images/tictactoeProjectMob.png" alt="tictactoe screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
