--- a/html/Javascript_projectPages/memoryGame_page.html
+++ b/html/Javascript_projectPages/memoryGame_page.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="../../images/memoryGameSnip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../../images/memoryGameSnipMob.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/memoryGameSnip.png" alt="memory game screenshot" class="screenshot d-md-block d-none">
+        <img src="../../images/memoryGameSnipMob.png" alt="memory game screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
