--- a/html/Javascript_projectPages/userLogin_project.html
+++ b/html/Javascript_projectPages/userLogin_project.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="../../images/userLoginProject.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../../images/userLoginProjectMob.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../../images/userLoginProject.png" alt="user login screenshot" class="screenshot d-md-block d-none">
+        <img src="../../images/userLoginProjectMob.png" alt="user login screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
