added Calculator card

--- a/index.html
+++ b/index.html
@@ -282,6 +282,14 @@
             </div>
         </div>
 
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/calculator.jpg" alt="calendar" loading="lazy"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Calculator</h3>
+                <p class="project_blurb josefin-light">Under Developement. Built using HTML, CSS, & TypeScript.</p>
+                <button class="btn_styling"><a href="./projects/Javascript Projects/Calculator/index.html">Project Page</a></button>
+            </div>
+        </div>
         
     </div>
 </section>
