added new tab option

--- a/html/Javascript_projectPages/memoryGame_page.html
+++ b/html/Javascript_projectPages/memoryGame_page.html
@@ -36,7 +36,7 @@
             <div class="hero_buttons">
                 <button class="btn_styling"><a href="../../projects/Javascript Projects/Memory Game Project.zip"
                     download="Memory Game Project">Download</a></button>
-                <button class="btn_styling"><a href="../../projects/Javascript Projects/Memory Game/index.html">View</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/Memory Game/index.html" target="_blank">View</a></button>
             </div>
         </div>
     </section>
