--- a/html/Javascript_projectPages/userLogin_project.html
+++ b/html/Javascript_projectPages/userLogin_project.html
@@ -36,7 +36,7 @@
             <div class="hero_buttons">
                 <button class="btn_styling"><a href="../../projects/Javascript Projects/User Login Project.zip"
                     download="User Login Project">Download</a></button>
-                <button class="btn_styling"><a href="../../projects/Javascript Projects/User Login/index.html">View</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/User Login/index.html" target="_blank">View</a></button>
             </div>
         </div>
     </section>
