--- a/html/Javascript_projectPages/countryData_page.html
+++ b/html/Javascript_projectPages/countryData_page.html
@@ -36,7 +36,7 @@
             <div class="hero_buttons">
                 <button class="btn_styling"><a href="../../projects/Javascript Projects/Country Data Project.zip"
                     download="Country Data Project">Download</a></button>
-                <button class="btn_styling"><a href="../../projects/Javascript Projects/Country Data/index.html">View</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/Country Data/index.html" target="_blank">View</a></button>
             </div>
         </div>
     </section>
