--- a/html/Javascript_projectPages/familyPurity_page.html
+++ b/html/Javascript_projectPages/familyPurity_page.html
@@ -36,7 +36,7 @@
             <div class="hero_buttons">
                 <button class="btn_styling"><a href=""
                     download="Family Purity Calendar">Download</a></button>
-                <button class="btn_styling"><a href="../../projects/Javascript Projects/Mikvah Calendar/index.html">View</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/Mikvah Calendar/index.html" target="_blank">View</a></button>
             </div>
         </div>
     </section>
