--- a/html/Javascript_projectPages/mathGame_page.html
+++ b/html/Javascript_projectPages/mathGame_page.html
@@ -36,7 +36,7 @@
             <div class="hero_buttons">
                 <button class="btn_styling"><a href="../../projects/Javascript Projects/Math Game Project.zip"
                     download="Math Game Project">Download</a></button>
-                <button class="btn_styling"><a href="../../projects/Javascript Projects/Math Game/index.html">View</a></button>
+                <button class="btn_styling"><a href="../../projects/Javascript Projects/Math Game/index.html" target="_blank">View</a></button>
             </div>
         </div>
     </section>
