--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Calculator</h3>
                 <p class="project_blurb josefin-light">Under Developement. Built using HTML, CSS, & TypeScript.</p>
-                <button class="btn_styling"><a href="./projects/Javascript Projects/Calculator/dist/index.html">Project Page</a></button>
+                <a href="./projects/Javascript Projects/Calculator/index.html">
+                    <button class="btn_styling">Project Page</button>
+                </a>
             </div>
         </div>
         
