--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Calculator</h3>
                 <p class="project_blurb josefin-light">Under Developement. Built using HTML, CSS, & TypeScript.</p>
-                <a href="./projects/Javascript%20Projects/Calculator/dist/index.html">
+                <a href="./projects/Javascript%20Projects/Calculator/dist/">
                     <button class="btn_styling">Project Page</button>
                 </a>
             </div>
