--- a/projects/Javascript Projects/Calculator/index.html
+++ b/projects/Javascript Projects/Calculator/index.html
@@ -15,7 +15,7 @@
       <div id="buttons">
         <button class="operator">x^</button>
         <button class="operator">%</button>
-        <button class="allClear">AC</button>
+        <button class="clearEntry">CE</button>
         <button class="clear">C</button>
         <button class="number">7</button>
         <button class="number">8</button>
