--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually
                     complex, responsive, and interactive designs. As of now, I have experience with HTML, CSS, Bootstrap, and Javascript. I have also done studied UI design and am familiar with Figma and Adobe Illustrator.
                 </p>
-                <button class="btn_styling"><a href="./Simcha Lapp Resume (2025).pdf" download="Simcha Lapp CV">Download my
+                <button class="btn_styling"><a href="./Simcha Lapp Update Resume.pdf" download="Simcha Lapp CV">Download my
                         CV</a></button>
 
                 <div class="icon_container">
